<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aibei.lixue.lixueandroids.samples.jingdongHome.JingdongHomeActivity">
    <LinearLayout
        android:id="@+id/ll_dalei3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.aibei.lixue.lixueandroids.samples.jingdongHome.MyScrollView
            android:id="@+id/scrollview_jingdong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/ll_rootview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <com.aibei.lixue.lixueandroids.samples.jingdongHome.banner.Banner
                    android:id="@+id/banner_jingdong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:banner_pointDrawable="@drawable/selector_banner_indicator"
                    app:banner_pointGravity="center_horizontal"
                    app:banner_pointTopBottomMargin="10dp"
                    app:banner_pointLeftRightMargin="10dp"
                    app:banner_default_image="@mipmap/home_scroll_banner"
                    />

                <LinearLayout
                    android:id="@+id/ll_leibie1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/balance"
                        android:text="@string/jingdong_text1"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/refund"
                        android:text="@string/jingdong_text2"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/shops"
                        android:text="@string/jingdong_text3"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/transfer"
                        android:text="@string/jingdong_text4"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/refund"
                        android:text="@string/jingdong_text10"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_leibie2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/recharge"
                        android:text="@string/jingdong_text5"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/bank"
                        android:text="@string/jingdong_text6"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/maybank"
                        android:text="@string/jingdong_text7"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/person"
                        android:text="@string/jingdong_text8"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/maybank"
                        android:text="@string/jingdong_text9"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        />

                </LinearLayout>
                <com.aibei.lixue.lixueandroids.samples.jingdongHome.banner.Banner
                    android:id="@+id/banner_jingdong2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:banner_pointDrawable="@drawable/selector_banner_indicator"
                    app:banner_pointGravity="center_horizontal"
                    app:banner_pointTopBottomMargin="10dp"
                    app:banner_pointLeftRightMargin="10dp"
                    app:banner_default_image="@mipmap/home_scroll_banner"
                    />

                <LinearLayout
                    android:id="@+id/ll_dalei"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/scrollview_jingdong"
                    >
                    <com.aibei.lixue.lixueandroids.samples.jingdongHome.PagerIndicator
                        android:id="@+id/pagerIndicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pi_slidingBlock="@drawable/login_nav_selection"
                        app:pi_allowWidthFull="true"
                        android:layout_centerInParent="true"
                        android:layout_alignParentBottom="true"
                        android:paddingTop="10dp"
                        android:background="#006655"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/text_slidingTabTitle"
                                android:drawablePadding="5dp"
                                android:text="@string/jingdong_tab1"
                                />
                            <TextView
                                style="@style/text_slidingTabTitle"
                                android:drawablePadding="5dp"
                                android:text="@string/jingdong_tab2" />

                            <TextView
                                style="@style/text_slidingTabTitle"
                                android:drawablePadding="5dp"
                                android:text="@string/jingdong_tab3" />

                            <TextView
                                style="@style/text_slidingTabTitle"
                                android:drawablePadding="5dp"
                                android:text="@string/jingdong_tab4" />

                            <TextView
                                style="@style/text_slidingTabTitle"
                                android:drawablePadding="5dp"
                                android:text="@string/jingdong_tab5" />
                        </LinearLayout>

                    </com.aibei.lixue.lixueandroids.samples.jingdongHome.PagerIndicator>
                    <com.aibei.lixue.lixueandroids.samples.jingdongHome.CommonViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>
            </LinearLayout>
        </com.aibei.lixue.lixueandroids.samples.jingdongHome.MyScrollView>

    </LinearLayout>

</RelativeLayout>
